<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Just Java</string>
    <string name="toppings">toppings</string>
    <string name="name">Name</string>
    <string name="whipped_cream">whipped cream</string>
    <string name="chocolate">chocolate</string>
    <string name="quantity">quantity</string>
    <string name="order">order</string>
    <string name="header">JustJava order for </string>
    <string name="upper">You cannot order more than 100 cups</string>
    <string name="lower">You cannot order less than 0 cups</string>
    <string name="name1">Name: <xliff:g id="name1" example ="Prashant">%s</xliff:g></string>
    <string name="thanks">Thank you!</string>
    <string name="chocolate1">Add Chocolate?</string>
    <string name="whipped">Add Whipped Cream?</string>
    <string name="total">Total:$</string>
    <string name="quan">Quantity:</string>
</resources>
